# saas-ui-page

app/dashboard/: layout.tsx  page.tsx
app/dashboard/analytics/: page.tsx
app/dashboard/contacts/: page.tsx
app/dashboard/projects/: page.tsx
app/dashboard/research/: page.tsx
app/dashboard/settings/: page.tsx
app/dashboard/team/: page.tsx
backend/: .env  .env.example  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  simple_api.py  start.sh
backend/docker/: Dockerfile  init-db.sql  nginx.conf
backend/scraper/: __init__.py
backend/scraper/api/: __init__.py  routes.py  schemas.py
backend/scraper/config/: __init__.py  settings.py
backend/scraper/models/: __init__.py  database.py  models.py
backend/scraper/services/: __init__.py  discovery.py  enrichment.py  orchestrator.py
backend/scraper/tasks/: __init__.py  celery_app.py  scraping_tasks.py
backend/scraper/utils/: __init__.py  anti_detection.py  monitoring.py
components/layout/: tsb-logo.tsx
