[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lead-scraper"
version = "1.0.0"
description = "Multi-stage lead enrichment scraper system"
authors = [{name = "Lead Scraper Team"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "celery>=5.3.4",
    "redis>=5.0.1",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.2",
    "pandas>=2.1.3",
    "pydantic>=2.5.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.1",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true